# cryptoutils

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  run.sh
include/: algos.h  handlers.h
src/: algos.cpp  handlers.cpp  main.cpp
